<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <!-- Logo -->
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/logo"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"/>

        <!-- Campo de Nombre -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            app:endIconMode="clear_text"
            app:boxStrokeColor="@color/cardview_dark_background"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo de Correo Electrónico -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_electr_nico"
            app:endIconMode="clear_text"
            app:boxStrokeColor="@color/cardview_dark_background"
            app:boxBackgroundMode="outline"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo de Contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrase_a"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="@color/cardview_dark_background"
            app:boxBackgroundMode="outline"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo de Confirmación de Contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmar_contrase_a"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="@color/cardview_dark_background"
            app:boxBackgroundMode="outline"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botón de Registro -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/registrarse"
            android:backgroundTint="@color/cardview_dark_background"
            android:layout_marginTop="24dp"/>
    </LinearLayout>
</ScrollView>
